migration-example-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: example-service
  namespace: tools
spec:
  selector:
    app.kubernetes.io/instance: tools-migration-example
  ports:
    - name: mpgw
      protocol: TCP
      port: 8001
      targetPort: 8001
